07 - Metrics/sonarqube/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarqube
spec:
  port:
    targetPort: sonarqube
  to:
    kind: Service
    name: sonarqube
